# ai-ops-k8s-mvp

./: .gitignore  README.md  pyproject.toml
src/ai_ops_agents/: cli.py  collector.py  rca.py  remediator.py
